--- a/index.html
+++ b/index.html
@@ -104,6 +104,56 @@
       @keyframes progress {
         0% { stroke-dasharray: 0 100; }
       }
+
+      /* Flashcard Flip Styles */
+      .flashcard {
+        perspective: 1000px;
+        cursor: pointer;
+        width: 100%;
+        min-height: 340px;
+      }
+
+      .flashcard-inner {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        min-height: 340px;
+        text-align: center;
+        transition: transform 0.6s;
+        transform-style: preserve-3d;
+      }
+
+      .flashcard.flipped .flashcard-inner {
+        transform: rotateY(180deg);
+      }
+
+      .flashcard-front,
+      .flashcard-back {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        -webkit-backface-visibility: hidden; /* Safari */
+        backface-visibility: hidden;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 2rem;
+        border-radius: 1.5rem;
+        background-color: white;
+        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+        border: 1px solid #F3F4F6;
+      }
+
+      .dark .flashcard-front,
+      .dark .flashcard-back {
+        background-color: #2D2D44;
+        border-color: #3D3D5C;
+      }
+
+      .flashcard-back {
+        transform: rotateY(180deg);
+      }
     </style>
   <script type="importmap">
 {
